# bazel_go_skaffold

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod
cmd/hello/: BUILD.bazel
